--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,40 +2,23 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.idat.farmacias">
 
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-    <uses-feature android:name="android.hardware.type.watch" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/Theme.Farmacias">
-        <uses-library
-            android:name="com.google.android.wearable"
-            android:required="true" />
 
-        <!--
-               Set to true if your app is Standalone, that is, it does not require the handheld
-               app to run.
-        -->
-        <meta-data
-            android:name="com.google.android.wearable.standalone"
-            android:value="true" />
-
+            <!--android:name=".ListadoEnfermeros"
+            android:label="@string/title_activity_listado_enfermeros">-->
         <activity
-            android:name=".ListadoEnfermeros"
-            android:label="@string/title_activity_listado_enfermeros"></activity>
-        <activity android:name=".SplashActivity">
+            android:name=".ListadoMedicamentos"
+            android:label="@string/title_activity_listado_medicamentos">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
     </application>
-
 </manifest>
