--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:theme="@style/Theme.Farmacias">
-        <activity android:name=".activities.ListadoDuenosActivity"></activity>
+        <activity android:name=".activities.AcerdadeActivity"></activity>
+        <activity android:name=".activities.ListadoDuenosActivity" />
         <activity
             android:name=".activities.ListadoMedicamentosActivity"
             android:label="@string/title_activity_listado_medicamentos"
