--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.MainActivity"
-            android:label="Menú principal" />
+            android:label="Main menu" />
         <activity
             android:name=".activities.DetalleMedicamentoActivity"
             android:label="Detalle de medicamento"
